--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,7 @@ openai==1.12.0
 python-dotenv==1.0.1
 pydantic==2.6.1
 pydantic-settings==2.1.0 
-tenacity-9.0.0
+tenacity==9.0.0
+sqlalchemy==2.0.27
+aiosqlite==0.19.0
+alembic==1.13.1
