--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@ant-design/x": "^1.0.5",
+    "@emotion/react": "^11.14.0",
+    "@tanstack/react-query": "^5.66.9",
     "antd": "^5.24.2",
+    "axios": "^1.8.1",
+    "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^10.0.0"
+    "react-markdown": "^10.0.0",
+    "react-router-dom": "^6.30.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.42",
@@ -23,4 +29,4 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.0"
   }
-} 
+}
