--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,8 @@ tenacity==9.0.0
 sqlalchemy==2.0.27
 aiosqlite==0.19.0
 alembic==1.13.1
+python-multipart==0.0.9
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+cryptography
+pydantic[email]
