--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
+    "build:backend": "source $(conda info --base)/etc/profile.d/conda.sh && conda activate MaoFlow12 && cd backend && pyinstaller run.spec",
+    "build:all:mac": "npm run build:backend && npm run build && mkdir -p dist/mac/MaoFlow.app/Contents/Resources/backend && cp -f backend/dist/maoflow dist/mac/MaoFlow.app/Contents/Resources/backend/ && chmod +x dist/mac/MaoFlow.app/Contents/Resources/backend/maoflow && electron-builder --mac",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write ."
