处理打包功能

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -16,10 +16,8 @@ prepend_sys_path = .
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
-# If specified, requires the python>=3.9 or backports.zoneinfo library.
-# Any required deps can installed by adding `alembic[tz]` to the pip requirements
-# string value is passed to ZoneInfo()
-# leave blank for localtime
+# If specified, requires the python-dateutil library that can be
+# installed by adding `alembic[tz]` to the pip requirements
 # timezone =
 
 # max length of characters to apply to the
@@ -43,7 +41,7 @@ prepend_sys_path = .
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
-# If this key is omitted entirely, it falls back to the legacy behavior of splitting on spaces and/or commas.
+# If this key is omitted entirely, it falls back to the legacy behavior of splitting on spaces and/or colons.
 # Valid values for version_path_separator are:
 #
 # version_path_separator = :
@@ -82,7 +80,7 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = root,sqlalchemy,alembic,alembic.migration
 
 [handlers]
 keys = console
@@ -91,24 +89,29 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = DEBUG
 handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = WARN
+level = DEBUG
 handlers =
 qualname = sqlalchemy.engine
 
 [logger_alembic]
-level = INFO
+level = DEBUG
 handlers =
 qualname = alembic
 
+[logger_alembic.migration]
+level = DEBUG
+handlers = console
+qualname = alembic.migration
+
 [handler_console]
 class = StreamHandler
-args = (sys.stderr,)
-level = NOTSET
+args = (sys.stdout,)
+level = DEBUG
 formatter = generic
 
 [formatter_generic]
